...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/history_label"
        app:layout_constraintTop_toBottomOf="@+id/filter_title" />

    <Spinner
        android:id="@+id/mood_spinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/spinner_background"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
...
