...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_container" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/filter_button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_filter_list_24"
        android:backgroundTint="#F8B64C"
        app:tint="@color/black"
...
